k8s/base/apps/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-nginx
  labels:
    app: backend-nginx
spec:
  selector:
    matchLabels:
      app: backend-nginx
      tier: backend-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend-nginx
        tier: backend-nginx
    spec:
      containers:
        - image: null
          name: backend-nginx
          ports:
            - containerPort: 80
          command:
            [
              "sh",
              "-c",
              "sed -i 's/lumen_php/$(UPSTREAM_ADMIN)/' /etc/nginx/conf.d/default.conf; exec nginx -g 'daemon off;'",
            ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-php
  labels:
    app: backend-php
spec:
  selector:
    matchLabels:
      app: backend-php
      tier: backend-php
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend-php
        tier: backend-php
    spec:
      volumes:
        - name: laravel-storage
          persistentVolumeClaim:
            claimName: null
      containers:
        - image: null
          name: backend-php
          volumeMounts:
            - name: laravel-storage
              mountPath: /var/www/html/storage
