k8s/base/apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-blue-yyy"
spec:
  rules:
  - host: mydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-nginx
            port:
              number: 80

  tls:
    - hosts:
        - mydomain.com
      secretName: blue-yyy-tls-secret
